# research-tbp

./: .clangd  .gitignore  .gitmessage.txt  CMakeLists.txt  CMakePresets.json  README.md  compile_flags.txt  cpp.json  main.cpp  setup.bat  test.bat
__past/_recreation/2DSALI/: 2D_SALI.cpp  Makefile
__past/_recreation/test/: test.py
__past/_recreation/test/Post-ARM/ChaosTheory/: SALI.c
__past/_sakuraisans code/FloquetTheory/: QRmethod.c
__past/_sakuraisans code/Post-ARM/VelocityIncrements/: delta_V.c
__past/_sakuraisans code/SensivitivityAnalysis/: RatiovsTime.c
_recreation/inc/: calc.c  calc.h
_recreation/test/: SALI_symplectic_ver1.0.c  SALI_symplectic_ver1.0_debug.c
_recreation/test/Post-ARM/PostOrbit/: BackwardOrbit.c  output.d  output_backwardorbit.d
_recreation/test/Post-ARM/SensivitivityAnalysisJacobiIntegral/: PositionvsJacobi.c
_sakuraisans code/FloquetTheory/: floquet.c
_sakuraisans code/Post-ARM/ChaosTheory/: output_new.d  picture_SALI.c
_sakuraisans code/Post-ARM/PostOrbit/: BackwardOrbit.c
_sakuraisans code/Pre-ARM/: vrel_estimate.c
_sakuraisans code/SensivitivityAnalysis/: AnglevsTime.c  RatiovsAnglevsTime.c
apps/: CMakeLists.txt
apps/SALI-3d/: main_sali_3d__.cpp
apps/SALI2d/: CMakeLists.txt
apps/SALI3D_boost/: CMakeLists.txt  main.cpp
apps/SALI3d/: CMakeLists.txt  main.cpp
apps/src/: SALI_slice_for3sali_v2.1.py  main_trajectory.cpp  main_trajectory_debug.cpp  main_zvc.cpp
config/: SALI2Dconfig.txt  point.txt
config/3D_crtbp_SALI/: 3DSALIconfig.txt  3DSALIconfig_1 copy 2.txt  3DSALIconfig_1.txt  3DSALIconfig_2.txt  3DSALIconfig_3.txt  3DSALIconfig_4.txt  3DSALIconfig_5.txt  3DSALIconfig_6.txt  3DSALIconfig_7.txt  3DSALIconfig_8.txt  3DSALIconfig_9.txt
config/DE441_crtbp/input/: OBT_2_Earth.txt
configs/3D_crtbp_SALI/: 3DSALIconfig.txt  3DSALIconfig_.txt  3DSALIconfig_1.txt  3DSALIconfig_2.txt  3DSALIconfig_3.txt  3DSALIconfig_4.txt  3DSALIconfig_5.txt  3DSALIconfig_6.txt
configs/astro_param/: astro_param.txt
data/result/SALI/: nan_replacer.py
lib/: CMakeLists.txt  chaosmap_generator.cpp  chaosmap_generator.hpp  crtbp.cpp  gnuplot.hpp  rtbp.hpp  utils.hpp  vector3d.hpp
lib/include/: crtbp.hpp  rtbp.hpp  utils.hpp
lib/src/: crtbp.cpp  gnuplot.cpp  rtbp.cpp
results/: nice.gp
results/SALI/: nan_replacer.py  output_file.txt  plot.gp
results/debug0/: plot.gp
scripts/: SALI_slice_for3sali_v2.2.py  ZVC-1.py  ZVC.py  requirements.txt
src/: SALI_slice_for1sali.py  SALI_slice_for3sali_v2.2_x copy.py  ZVC-1.py  ZVC.py  main_DE441_sali.cpp  main_debug.cpp  main_sali_2d.cpp  main_sali_3d copy.cpp  main_sali_3d.cpp  main_trajectorysearch.cpp
test/: CMakeLists.txt  relative_orbit_output.csv  sat_simu.cpp  test.cpp
test/_past/: Makefile  ODE copy.hpp  ODE.hpp  hello.cpp  main_FFchaos_validation.cpp  relative_orbit_rtn_corrected.csv  test_.cpp
test/boostandomp/: CMakeLists.txt  main.cpp
test/testapp/: CMakeLists.txt
